--- a/series.conf
+++ b/series.conf
@@ -33480,6 +33480,7 @@
 	patches.suse/net-libwx-remove-duplicate-page_pool_put_full_page.patch
 	patches.suse/net-libwx-fix-the-using-of-Rx-buffer-DMA.patch
 	patches.suse/mptcp-make-fallback-action-and-fallback-decision-ato.patch
+	patches.suse/mptcp-plug-races-between-subflow-fail-and-subflow-cr.patch
 	patches.suse/ice-add-NULL-check-in-eswitch-lag-check.patch
 	patches.suse/ipv6-mcast-Delay-put-pmc-idev-in-mld_del_delrec.patch
 	patches.suse/netfilter-nf_conntrack-fix-crash-due-to-removal-of-uniniti.patch
