--- a/series.conf
+++ b/series.conf
@@ -12156,6 +12156,7 @@
 	patches.suse/KVM-s390-Fix-access-to-unavailable-adapter-indicator-pages.patch
 	patches.suse/KVM-s390-Fix-incorrect-usage-of-mmu_notifier_register.patch
 	patches.suse/net-rfkill-gpio-Fix-crash-due-to-dereferencering-uni.patch
+	patches.suse/tls-make-sure-to-abort-the-stream-if-headers-are-bogus.patch
 	patches.suse/cnic-Fix-use-after-free-bugs-in-cnic_delete_task.patch
 	patches.suse/drm-bridge-anx7625-Fix-NULL-pointer-dereference-with.patch
 	patches.suse/drm-bridge-cdns-mhdp8546-Fix-missing-mutex-unlock-on.patch
