--- a/series.conf
+++ b/series.conf
@@ -50517,6 +50517,7 @@
 	patches.suse/Bluetooth-Fix-use-after-free-in-l2cap_sock_cleanup_l.patch
 	patches.suse/dmaengine-idxd-Fix-refcount-underflow-on-module-unlo.patch
 	patches.suse/dmaengine-ti-edma-Fix-memory-allocation-size-for-que.patch
+	patches.suse/Bluetooth-MGMT-Fix-possible-UAFs.patch
 
 	# out-of-tree patches
 	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
