--- a/series.conf
+++ b/series.conf
@@ -12213,6 +12213,7 @@
 	patches.suse/can-sun4i_can-populate-ndo_change_mtu-to-prevent-buf.patch
 	patches.suse/can-mcba_usb-populate-ndo_change_mtu-to-prevent-buff.patch
 	patches.suse/can-peak_usb-fix-shift-out-of-bounds-issue.patch
+	patches.suse/net-mlx5-fs-fix-UAF-in-flow-counter-release.patch
 	patches.suse/drm-amd-display-Init-DCN35-clocks-from-pre-os-HW-val.patch
 	patches.suse/drm-amd-display-remove-output_tf_change-flag.patch
 	patches.suse/drm-ast-Use-msleep-instead-of-mdelay-for-edid-read.patch
