--- a/series.conf
+++ b/series.conf
@@ -12192,6 +12192,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-mute-led-for-HP-Laptop-15-dw4xx.patch
 	patches.suse/crypto-af_alg-Set-merge-to-zero-early-in-af_alg_send.patch
 	patches.suse/mmc-mvsdio-Fix-dma_unmap_sg-nents-value.patch
+	patches.suse/io_uring-fix-incorrect-io_kiocb-reference-in-io_link.patch
 	patches.suse/iommu-vt-d-Fix-__domain_mapping-s-usage-of-switch_to.patch
 	patches.suse/iommu-amd-Fix-alias-device-DTE-setting.patch
 	patches.suse/firewire-core-fix-overlooked-update-of-subsystem-ABI.patch
