--- a/series.conf
+++ b/series.conf
@@ -11753,6 +11753,7 @@
 	patches.suse/netfilter-ctnetlink-remove-refcounting-in-expectation-dump.patch
 	patches.suse/net-page_pool-allow-enabling-recycling-late-fix-fals.patch
 	patches.suse/vsock-Do-not-allow-binding-to-VMADDR_PORT_ANY.patch
+	patches.suse/sctp-linearize-cloned-gso-packets-in-sctp_rcv.patch
 	patches.suse/msft-hv-3329-hv_netvsc-Fix-panic-during-namespace-deletion-with-V.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990A-w-audio-.patch
 	patches.suse/tls-handle-data-disappearing-from-under-the-TLS-ULP.patch
