--- a/series.conf
+++ b/series.conf
@@ -34206,6 +34206,7 @@
 	patches.suse/net-smc-fix-UAF-on-smcsk-after-smc_listen_out.patch
 	patches.suse/net-sched-Make-cake_enqueue-return-NET_XMIT_CN-when-.patch
 	patches.suse/net-hsr-reject-HSR-frame-if-skb-can-t-hold-tag.patch
+	patches.suse/ipv6-sr-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.suse/tls-fix-handling-of-zero-length-records-on-the-rx_list.patch
 	patches.suse/netfilter-nf_reject-don-t-leak-dst-refcount-for-loopback-p.patch
 	patches.suse/cpupower-Fix-a-bug-where-the-t-option-of-the-set-sub.patch
