--- a/series.conf
+++ b/series.conf
@@ -11993,6 +11993,7 @@
 	patches.suse/btrfs-fix-race-between-logging-inode-and-checking-if.patch
 	patches.suse/btrfs-fix-race-between-setting-last_dir_index_offset.patch
 	patches.suse/btrfs-avoid-load-store-tearing-races-when-checking-i.patch
+	patches.suse/of_numa-fix-uninitialized-memory-nodes-causing-kerne.patch
 	patches.suse/ocfs2-prevent-release-journal-inode-after-journal-sh.patch
 	patches.suse/mm-userfaultfd-fix-kmap_local-LIFO-ordering-for-CONF.patch
 	patches.suse/mm-damon-core-prevent-unnecessary-overflow-in-damos_.patch
