--- a/series.conf
+++ b/series.conf
@@ -11955,6 +11955,7 @@
 	patches.suse/net-rose-split-remove-and-free-operations-in-rose_re.patch
 	patches.suse/net-rose-convert-use-field-to-refcount_t.patch
 	patches.suse/net-rose-include-node-references-in-rose_neigh-refco.patch
+	patches.suse/sctp-initialize-more-fields-in-sctp_v6_from_sk.patch
 	patches.suse/net-rose-fix-a-typo-in-rose_clear_routes.patch
 	patches.suse/io_uring-kbuf-always-use-READ_ONCE-to-read-ring-prov.patch
 	patches.suse/drm-xe-xe_sync-avoid-race-during-ufence-signaling.patch
