--- a/series.conf
+++ b/series.conf
@@ -11784,6 +11784,7 @@
 	patches.suse/ata-libata-scsi-Fix-CDL-control.patch
 	patches.suse/x86-bugs-Select-best-SRSO-mitigation.patch
 	patches.suse/jbd2-prevent-softlockup-in-jbd2_log_do_checkpoint.patch
+	patches.suse/btrfs-subpage-keep-TOWRITE-tag-until-folio-is-cleane.patch
 	patches.suse/btrfs-fix-incorrect-log-message-for-nobarrier-mount-.patch
 	patches.suse/btrfs-restore-mount-option-info-messages-during-moun.patch
 	patches.suse/btrfs-fix-printing-of-mount-info-messages-for-NODATA.patch
