--- a/series.conf
+++ b/series.conf
@@ -26948,6 +26948,7 @@
 	patches.suse/nfs-Properly-initialize-server-writeback.patch
 	patches.suse/nfs-Block-on-write-congestion.patch
 	patches.suse/NFSv4.1-another-fix-for-EXCHGID4_FLAG_USE_PNFS_DS-fo.patch
+	patches.suse/nfs-remove-dead-code-for-the-old-swap-over-NFS-implementation.patch
 	patches.suse/nfs-pass-explicit-offset-count-to-trace-events.patch
 	patches.suse/SUNRPC-Fix-a-race-to-wake-a-sync-task.patch
 	patches.suse/SUNRPC-Fixup-gss_status-tracepoint-error-output.patch
