--- a/series.conf
+++ b/series.conf
@@ -26951,6 +26951,7 @@
 	patches.suse/nfs-remove-dead-code-for-the-old-swap-over-NFS-implementation.patch
 	patches.suse/nfs-remove-nfs_folio_private_request.patch
 	patches.suse/nfs-simplify-nfs_folio_find_and_lock_request.patch
+	patches.suse/nfs-fold-nfs_folio_find_and_lock_request-into-nfs_lock_and_join_requests.patch
 	patches.suse/nfs-pass-explicit-offset-count-to-trace-events.patch
 	patches.suse/SUNRPC-Fix-a-race-to-wake-a-sync-task.patch
 	patches.suse/SUNRPC-Fixup-gss_status-tracepoint-error-output.patch
