--- a/series.conf
+++ b/series.conf
@@ -32138,6 +32138,7 @@
 	patches.suse/SUNRPC-Don-t-allow-waiting-for-exiting-tasks.patch
 	patches.suse/NFS-Don-t-allow-waiting-for-exiting-tasks.patch
 	patches.suse/NFSv4-Check-for-delegation-validity-in-nfs_start_delegation_return_locked.patch
+	patches.suse/nfs-Add-missing-release-on-error-in-nfs_lock_and_join_requests.patch
 	patches.suse/counter-stm32-lptimer-cnt-fix-error-handling-when-en.patch
 	patches.suse/counter-microchip-tcb-capture-Fix-undefined-counter-.patch
 	patches.suse/staging-rtl8723bs-select-CONFIG_CRYPTO_LIB_AES.patch
