--- a/series.conf
+++ b/series.conf
@@ -18637,6 +18637,7 @@
 	patches.suse/Bluetooth-RFCOMM-don-t-call-kfree_skb-under-spin_loc.patch
 	patches.suse/hamradio-don-t-call-dev_kfree_skb-under-spin_lock_ir.patch
 	patches.suse/i40e-Fix-the-inability-to-attach-XDP-program-on-down.patch
+	patches.suse/hugetlbfs-fix-null-ptr-deref-in-hugetlbfs_parse_para.patch
 	patches.suse/mm-memcg-fix-swapcached-stat-accounting.patch
 	patches.suse/scsi-libsas-Add-sas_ata_device_link_abort.patch
 	patches.suse/scsi-lpfc-Set-sli4_param-s-cmf-option-to-zero-when-C.patch
