--- a/series.conf
+++ b/series.conf
@@ -23296,6 +23296,7 @@
 	patches.suse/igb-Do-not-free-q_vector-unless-new-one-was-allocate.patch
 	patches.suse/bpf-propagate-precision-in-ALU-ALU64-operations.patch
 	patches.suse/wifi-iwlwifi-mvm-fix-double-free-on-tx-path.patch
+	patches.suse/hugetlbfs-fix-null-ptr-deref-in-hugetlbfs_parse_para.patch
 	patches.suse/KVM-VMX-Execute-IBPB-on-emulated-VM-exit-when-guest-has-IBRS
 	patches.suse/misc-sgi-gru-fix-use-after-free-error-in-gru_set_con.patch
 	patches.suse/gfs2-Cosmetic-gfs2_dinode_-in-out-cleanup.patch
