--- a/series.conf
+++ b/series.conf
@@ -12145,6 +12145,7 @@
 	patches.suse/cpufreq-amd-pstate-Fix-a-regression-leading-to-EPP-0.patch
 	patches.suse/s390-pai-Deny-all-events-not-handled-by-this-PMU.patch
 	patches.suse/s390-cpum_cf-Deny-all-sampling-events-by-counter-PMU.patch
+	patches.suse/net-fec-Fix-possible-NPD-in-fec_enet_phy_reset_after.patch
 	patches.suse/genetlink-fix-genl_bind-invoking-bind-after-EPERM.patch
 	patches.suse/net-phy-fix-phy_uses_state_machine.patch
 	patches.suse/igb-Fix-NULL-pointer-dereference-in-ethtool-loopback.patch
