--- a/series.conf
+++ b/series.conf
@@ -34342,6 +34342,7 @@
 	patches.suse/Bluetooth-hci_sync-Fix-hci_resume_advertising_sync.patch
 	patches.suse/Bluetooth-hci_event-Fix-UAF-in-hci_acl_create_conn_s.patch
 	patches.suse/Bluetooth-MGMT-Fix-possible-UAFs.patch
+	patches.suse/i40e-fix-input-validation-logic-for-action_meta.patch
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
 	patches.suse/can-etas_es58x-populate-ndo_change_mtu-to-prevent-bu.patch
 	patches.suse/can-hi311x-populate-ndo_change_mtu-to-prevent-buffer.patch
