--- a/series.conf
+++ b/series.conf
@@ -12442,6 +12442,7 @@
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
 	patches.suse/wifi-rtl8xxxu-Don-t-claim-USB-ID-07b8-8188.patch
+	patches.suse/wifi-rtw89-fix-use-after-free-in-rtw89_core_tx_kick_.patch
 	patches.suse/wifi-rtw89-avoid-circular-locking-dependency-in-ser_.patch
 	patches.suse/wifi-ath12k-fix-the-fetching-of-combined-rssi.patch
 	patches.suse/wifi-ath12k-fix-wrong-logging-ID-used-for-CE.patch
