--- a/series.conf
+++ b/series.conf
@@ -23444,6 +23444,7 @@
 	patches.suse/drm-qxl-fix-UAF-on-handle-creation.patch
 	patches.suse/net-xfrm-Fix-xfrm_address_filter-OOB-read.patch
 	patches.suse/xfrm-fix-slab-use-after-free-in-decode_session6.patch
+	patches.suse/ip_vti-fix-potential-slab-use-after-free-in-decode_session.patch
 	patches.suse/xfrm-add-NULL-check-in-xfrm_update_ae_params.patch
 	patches.suse/netfilter-nf_tables-fix-kdoc-warnings-after-gc-rewor.patch
 	patches.suse/netfilter-nf_tables-fix-GC-transaction-races-with-ne.patch
