--- a/series.conf
+++ b/series.conf
@@ -12206,6 +12206,7 @@
 	patches.suse/net-mlx5e-Harden-uplink-netdev-access-against-device.patch
 	patches.suse/net-rfkill-gpio-Fix-crash-due-to-dereferencering-uni.patch
 	patches.suse/ice-fix-Rx-page-leak-on-multi-buffer-frames.patch
+	patches.suse/igc-don-t-fail-igc_probe-on-LED-setup-error.patch
 	patches.suse/tls-make-sure-to-abort-the-stream-if-headers-are-bogus.patch
 	patches.suse/cnic-Fix-use-after-free-bugs-in-cnic_delete_task.patch
 	patches.suse/drm-bridge-anx7625-Fix-NULL-pointer-dereference-with.patch
