--- a/series.conf
+++ b/series.conf
@@ -12202,6 +12202,7 @@
 	patches.suse/KVM-s390-Fix-access-to-unavailable-adapter-indicator-pages.patch
 	patches.suse/KVM-s390-Fix-incorrect-usage-of-mmu_notifier_register.patch
 	patches.suse/net-tcp-Fix-a-NULL-pointer-dereference-when-using-TCP-AO-w.patch
+	patches.suse/qed-Don-t-collect-too-many-protection-override-GRC-e.patch
 	patches.suse/net-mlx5e-Harden-uplink-netdev-access-against-device.patch
 	patches.suse/net-rfkill-gpio-Fix-crash-due-to-dereferencering-uni.patch
 	patches.suse/tls-make-sure-to-abort-the-stream-if-headers-are-bogus.patch
