--- a/series.conf
+++ b/series.conf
@@ -34494,6 +34494,7 @@
 	patches.suse/qed-Don-t-collect-too-many-protection-override-GRC-e.patch
 	patches.suse/net-mlx5e-Harden-uplink-netdev-access-against-device.patch
 	patches.suse/net-rfkill-gpio-Fix-crash-due-to-dereferencering-uni.patch
+	patches.suse/ice-fix-Rx-page-leak-on-multi-buffer-frames.patch
 	patches.suse/tls-make-sure-to-abort-the-stream-if-headers-are-bogus.patch
 	patches.suse/cnic-Fix-use-after-free-bugs-in-cnic_delete_task.patch
 	patches.suse/drm-bridge-anx7625-Fix-NULL-pointer-dereference-with.patch
