--- a/series.conf
+++ b/series.conf
@@ -34523,6 +34523,7 @@
 	patches.suse/Bluetooth-hci_event-Fix-UAF-in-hci_acl_create_conn_s.patch
 	patches.suse/Bluetooth-MGMT-Fix-possible-UAFs.patch
 	patches.suse/i40e-add-validation-for-ring_len-param.patch
+	patches.suse/i40e-fix-idx-validation-in-i40e_validate_queue_map.patch
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
 	patches.suse/can-hi311x-fix-null-pointer-dereference-when-resumin.patch
 	patches.suse/can-rcar_canfd-Fix-controller-mode-setting.patch
