--- a/series.conf
+++ b/series.conf
@@ -34496,6 +34496,7 @@
 	patches.suse/KVM-SVM-Sync-TPR-from-LAPIC-into-VMCB-V_TPR-even-if-.patch
 	patches.suse/KVM-s390-Fix-incorrect-usage-of-mmu_notifier_register.patch
 	patches.suse/net-mlx5e-Harden-uplink-netdev-access-against-device.patch
+	patches.suse/tcp-Clear-tcp_sk-sk-fastopen_rsk-in-tcp_disconnect.patch
 	patches.suse/net-rfkill-gpio-Fix-crash-due-to-dereferencering-uni.patch
 	patches.suse/tls-make-sure-to-abort-the-stream-if-headers-are-bogus.patch
 	patches.suse/cnic-Fix-use-after-free-bugs-in-cnic_delete_task.patch
