--- a/series.conf
+++ b/series.conf
@@ -23806,6 +23806,7 @@
 	patches.suse/KVM-x86-use-array_index_nospec-with-indices-that-com.patch
 	patches.suse/e1000e-fix-heap-overflow-in-e1000_set_eeprom.patch
 	patches.suse/i40e-add-validation-for-ring_len-param.patch
+	patches.suse/i40e-add-max-boundary-check-for-VF-filters.patch
 	patches.suse/hfsplus-fix-slab-out-of-bounds-read-in-hfsplus_uni2asc_fix.patch
 
 	########################################################
