--- a/series.conf
+++ b/series.conf
@@ -23459,6 +23459,7 @@
 	patches.suse/wifi-mac80211_hwsim-drop-short-frames.patch
 	patches.suse/net-sched-sch_hfsc-Ensure-inner-classes-have-fsc-cur.patch
 	patches.suse/igb-set-max-size-RX-buffer-when-store-bad-packet-is-.patch
+	patches.suse/md-raid1-fix-potential-OOB-in-raid1_remove_disk.patch
 	patches.suse/tty-n_gsm-require-CAP_NET_ADMIN-to-attach-N_GSM0710-.patch
 	patches.suse/nxp-nci-add-NXP1002-id.patch
 	patches.suse/netfilter-xt_sctp-validate-the-flag_info-count.patch
