--- a/series.conf
+++ b/series.conf
@@ -23472,6 +23472,7 @@
 	patches.suse/btrfs-improve-error-message-after-failure-to-add-del.patch
 	patches.suse/btrfs-remove-BUG-after-failure-to-insert-delayed-dir.patch
 	patches.suse/net-tls-do-not-free-tls_rec-on-async-operation-in-bp.patch
+	patches.suse/md-raid1-fix-error-ISO-C90-forbids-mixed-declaration.patch
 	patches.suse/scsi-pm80xx-Avoid-leaking-tags-when-processing-OPC_INB_SET_CONTROLLER_CONFIG-command.patch
 	patches.suse/netfilter-nft_set_rbtree-use-read-spinlock-to-avoid-.patch
 	patches.suse/netfilter-nft_set_hash-try-later-when-GC-hits-EAGAIN.patch
