--- a/series.conf
+++ b/series.conf
@@ -33826,6 +33826,7 @@
 	patches.suse/soc-qcom-fix-endianness-for-QMI-header.patch
 	patches.suse/soc-qcom-mdt_loader-Fix-error-return-values-in-mdt_h.patch
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
+	patches.suse/ARM-tegra-Use-I-O-memcpy-to-write-to-IRAM.patch
 	patches.suse/mmc-rtsx_usb_sdmmc-Fix-error-path-in-sd_set_power_mo.patch
 	patches.suse/mmc-sdhci-cadence-add-Mobileye-eyeQ-support.patch
 	patches.suse/mmc-sdhci-msm-Ensure-SD-card-power-isn-t-ON-when-car.patch
