--- a/series.conf
+++ b/series.conf
@@ -12500,6 +12500,7 @@
 	patches.suse/maple_tree-fix-MAPLE_PARENT_RANGE32-and-parent-point.patch
 	patches.suse/maple_tree-fix-testing-for-32-bit-builds.patch
 	patches.suse/drivers-base-node-fix-double-free-in-register_one_no.patch
+	patches.suse/mm-swap-check-for-stable-address-space-before-operating-on.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
