--- a/series.conf
+++ b/series.conf
@@ -34819,6 +34819,7 @@
 	patches.suse/r8152-add-error-handling-in-rtl8152_driver_init.patch
 	patches.suse/net-usb-lan78xx-fix-use-of-improperly-initialized-de.patch
 	patches.suse/btrfs-fix-clearing-of-BTRFS_FS_RELOC_RUNNING-if-relo.patch
+	patches.suse/btrfs-do-not-assert-we-found-block-group-item-when-c.patch
 	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
 	patches.suse/drm-amd-powerplay-Fix-CIK-shutdown-temperature.patch
