--- a/series.conf
+++ b/series.conf
@@ -55736,6 +55736,7 @@
 	patches.suse/IB-mlx5-Fix-obj_type-mismatch-for-SRQ-event-subscrip.patch
 	patches.suse/cpufreq-Initialize-cpufreq-based-invariance-before-subsys.patch
 	patches.suse/arm64-dts-imx8mp-Correct-thermal-sensor-index.patch
+	patches.suse/net-tun-Update-napi-skb-after-XDP-process.patch
 	patches.suse/net-smc-fix-warning-in-smc_rx_splice-when-calling-get_page.patch
 	patches.suse/Bluetooth-hci_sync-Fix-hci_resume_advertising_sync.patch
 	patches.suse/Bluetooth-hci_event-Fix-UAF-in-hci_acl_create_conn_s.patch
