--- a/series.conf
+++ b/series.conf
@@ -34671,6 +34671,7 @@
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.suse/net-usb-Remove-disruptive-netif_wake_queue-in-rtl815.patch
+	patches.suse/vhost-vringh-Fix-copy_to_iter-return-value-check.patch
 	patches.suse/net-nfc-nci-Add-parameter-validation-for-packet-data.patch
 	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
 	patches.suse/maple_tree-fix-MAPLE_PARENT_RANGE32-and-parent-point.patch
