--- a/series.conf
+++ b/series.conf
@@ -12495,6 +12495,7 @@
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.suse/Bluetooth-hci_sync-Fix-using-random-address-for-BIG-.patch
 	patches.suse/net-usb-Remove-disruptive-netif_wake_queue-in-rtl815.patch
+	patches.suse/vhost-vringh-Fix-copy_to_iter-return-value-check.patch
 	patches.suse/net-nfc-nci-Add-parameter-validation-for-packet-data.patch
 	patches.suse/mm-memory-tiering-fix-PGPROMOTE_CANDIDATE-counting.patch
 	patches.suse/drivers-base-node-handle-error-properly-in-register_.patch
