--- a/series.conf
+++ b/series.conf
@@ -24044,6 +24044,7 @@
 	patches.suse/i40e-add-max-boundary-check-for-VF-filters.patch
 	patches.suse/xfrm-xfrm_alloc_spi-shouldn-t-use-0-as-SPI.patch
 	patches.suse/octeontx2-pf-Fix-potential-use-after-free-in-otx2_tc_add_f.patch
+	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 
 	########################################################
