--- a/series.conf
+++ b/series.conf
@@ -34739,6 +34739,7 @@
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
+	patches.suse/coresight-trbe-Return-NULL-pointer-for-allocation-failures.patch
 	patches.suse/phy-cdns-dphy-Store-hs_clk_rate-and-return-it.patch
 	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
 	patches.suse/phy-cadence-cdns-dphy-Fix-PLL-lock-and-O_CMN_READY-p.patch
