--- a/series.conf
+++ b/series.conf
@@ -23303,6 +23303,7 @@
 	patches.suse/gfs2-Always-check-inode-size-of-inline-inodes.patch
 	patches.suse/x86-mm-Randomize-per-cpu-entry-area.patch
 	patches.suse/powerpc-rtas-clean-up-includes.patch
+	patches.suse/pnode-terminate-at-peers-of-source.patch
 	patches.suse/nvme-fix-multipath-crash-caused-by-flush-request-whe.patch
 	patches.suse/x86-bugs-Flush-IBP-in-ib_prctl_set.patch
 	patches.suse/net-sched-atm-dont-intepret-cls-results-when-asked-t.patch
