--- a/series.conf
+++ b/series.conf
@@ -23838,6 +23838,7 @@
 	patches.suse/tcp-check-skb-is-non-NULL-in-tcp_rto_delta_us.patch
 	patches.suse/smb-client-fix-UAF-in-async-decryption.patch
 	patches.suse/btrfs-wait-for-fixup-workers-before-stopping-cleaner.patch
+	patches.suse/udf-fix-uninit-value-use-in-udf_get_fileshortad.patch
 	patches.suse/aoe-fix-the-potential-use-after-free-problem-in-more.patch
 	patches.suse/unicode-Don-t-special-case-ignorable-code-points.patch
 	patches.suse/RDMA-bnxt_re-Fix-a-bug-while-setting-up-Level-2-PBL-.patch
