--- a/series.conf
+++ b/series.conf
@@ -23346,6 +23346,7 @@
 	patches.suse/tun-tun_chr_open-correctly-initialize-socket-uid.patch
 	patches.suse/tap-tap_open-correctly-initialize-socket-uid.patch
 	patches.suse/rds-rds_rm_zerocopy_callback-correct-order-for-list_add_tail.patch
+	patches.suse/wifi-ath9k-Fix-potential-stack-out-of-bounds-write-in-ath9.patch
 	patches.suse/bpf-add-missing-header-file-include.patch
 	patches.suse/HID-asus-use-spinlock-to-protect-concurrent-accesses.patch
 	patches.suse/HID-asus-use-spinlock-to-safely-schedule-workers.patch
