--- a/series.conf
+++ b/series.conf
@@ -24255,6 +24255,7 @@
 	patches.suse/hfsplus-fix-slab-out-of-bounds-read-in-hfsplus_strca.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/fs-udf-fix-OOB-read-in-lengthAllocDescs-handling.patch
+	patches.suse/KVM-arm64-Prevent-access-to-vCPU-events-before-init.patch
 
 	# out-of-tree patches
 	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
