--- a/series.conf
+++ b/series.conf
@@ -34806,6 +34806,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
 	patches.suse/tcp-Don-t-call-reqsk_fastopen_remove-in-tcp_conn_request.patch
 	patches.suse/net-usb-asix-hold-PM-usage-ref-to-avoid-PM-MDIO-RTNL.patch
+	patches.suse/net-9p-fix-double-req-put-in-p9_fd_cancelled.patch
 	patches.suse/tpm_tis-Fix-incorrect-arguments-in-tpm_tis_probe_irq.patch
 	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
 	patches.suse/gpio-wcd934x-mark-the-GPIO-controller-as-sleeping.patch
