--- a/series.conf
+++ b/series.conf
@@ -34879,6 +34879,7 @@
 	patches.suse/drm-rockchip-vop2-use-correct-destination-rectangle-.patch
 	patches.suse/accel-qaic-Treat-remaining-0-as-error-in-find_and_ma.patch
 	patches.suse/drm-sched-Fix-potential-double-free-in-drm_sched_job.patch
+	patches.suse/ALSA-hda-cs35l41-Fix-NULL-pointer-dereference-in-cs3.patch
 	patches.suse/ALSA-firewire-amdtp-stream-fix-enum-kernel-doc-warni.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-deference-in-try_to_.patch
 	patches.suse/ASoC-codecs-Fix-gain-setting-ranges-for-Renesas-IDT8.patch
