--- a/series.conf
+++ b/series.conf
@@ -12629,6 +12629,7 @@
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
 	patches.suse/msft-hv-3336-uio_hv_generic-Let-userspace-take-care-of-interrupt-.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
+	patches.suse/pps-fix-warning-in-pps_register_cdev-when-register-d.patch
 	patches.suse/iio-adc-pac1934-fix-channel-disable-configuration.patch
 	patches.suse/iio-xilinx-ams-Unmask-interrupts-after-updating-alar.patch
 	patches.suse/iio-xilinx-ams-Fix-AMS_ALARM_THR_DIRECT_MASK.patch
