--- a/series.conf
+++ b/series.conf
@@ -34624,6 +34624,7 @@
 	patches.suse/power-supply-max77976_charger-fix-constant-current-r.patch
 	patches.suse/pinctrl-equilibrium-Remove-redundant-semicolons.patch
 	patches.suse/pinctrl-meson-gxl-add-missing-i2c_d-pinmux.patch
+	patches.suse/pinctrl-check-the-return-value-of-pinmux_ops-get_fun.patch
 	patches.suse/pinctrl-samsung-Drop-unused-S3C24xx-driver-data.patch
 	patches.suse/pinctrl-renesas-Use-int-type-to-store-negative-error.patch
 	patches.suse/i2c-mediatek-fix-potential-incorrect-use-of-I2C_MAST.patch
