--- a/series.conf
+++ b/series.conf
@@ -34720,6 +34720,7 @@
 	patches.suse/maple_tree-fix-MAPLE_PARENT_RANGE32-and-parent-point.patch
 	patches.suse/drivers-base-node-fix-double-free-in-register_one_no.patch
 	patches.suse/Squashfs-fix-uninit-value-in-squashfs_get_parent.patch
+	patches.suse/ocfs2-fix-double-free-in-user_cluster_connect.patch
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
 	patches.suse/fs-udf-fix-OOB-read-in-lengthAllocDescs-handling.patch
