--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1254,3 +1254,4 @@ b5f717b31b5e478398740db8aee2ecbc4dd72bf3 # fix that does not apply; issue cannot
 708e2371f77a9d3f2f1d54d1ec835d71b9d0dafe # fix uses function(s)/data not present
 7ba962f4d73b2b768c977db2c7cd9551798bba26 # fix that cannot apply; ublk code base out of date
 c2c8089f325ed703fd5123b39e2dece1dd605904 # fix that cannot apply; ublk code base out of date
+e1bc3a13bd775791cca0bb144d977b00f3598042 # CVE-2025-38189 https://bugzilla.suse.com/show_bug.cgi?id=1245812#c9
