--- a/series.conf
+++ b/series.conf
@@ -12782,6 +12782,7 @@
 	patches.suse/btrfs-fix-clearing-of-BTRFS_FS_RELOC_RUNNING-if-relo.patch
 	patches.suse/btrfs-fix-memory-leak-on-duplicated-memory-in-the-qg.patch
 	patches.suse/btrfs-do-not-assert-we-found-block-group-item-when-c.patch
+	patches.suse/btrfs-fix-memory-leaks-when-rejecting-a-non-SINGLE-d.patch
 	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
 	patches.suse/drm-amdgpu-fix-handling-of-harvesting-for-ip_discove.patch
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
