--- a/series.conf
+++ b/series.conf
@@ -11411,6 +11411,7 @@
 	patches.suse/scsi-iscsi-Add-strlen-check-in-iscsi_if_set-_host-_param.patch
 	patches.suse/scsi-be2iscsi-Add-length-check-when-parsing-nlattrs.patch
 	patches.suse/scsi-qla4xxx-Add-length-check-when-parsing-nlattrs.patch
+	patches.suse/scsi-target-iscsi-Fix-buffer-overflow-in-lio_target_.patch
 	patches.suse/scsi-hisi_sas-Fix-warning-detected-by-sparse.patch
 	patches.suse/scsi-qedf-Do-not-touch-__user-pointer-in-qedf_dbg_stop_io_on_error_cmd_read-directly.patch
 	patches.suse/scsi-qedf-Do-not-touch-__user-pointer-in-qedf_dbg_debug_cmd_read-directly.patch
