--- a/series.conf
+++ b/series.conf
@@ -23465,6 +23465,7 @@
 	patches.suse/igb-set-max-size-RX-buffer-when-store-bad-packet-is-.patch
 	patches.suse/md-raid1-fix-potential-OOB-in-raid1_remove_disk.patch
 	patches.suse/tty-n_gsm-require-CAP_NET_ADMIN-to-attach-N_GSM0710-.patch
+	patches.suse/scsi-target-iscsi-Fix-buffer-overflow-in-lio_target_.patch
 	patches.suse/nxp-nci-add-NXP1002-id.patch
 	patches.suse/netfilter-xt_sctp-validate-the-flag_info-count.patch
 	patches.suse/netfilter-xt_u32-validate-user-space-input.patch
