--- a/blacklist.conf
+++ b/blacklist.conf
@@ -609,3 +609,4 @@ bd2703b42decebdcddf76e277ba76b4c4a142d73 # code change without security impact, 
 7c71a0af81ba72de9b2c501065e4e718aba9a271 # Intrusive io_uring perf optimization for buffer bundle.
 b53e523261bf058ea4a518b482222e7a277b186b # Intrusive io_uring change for small benefit without further patches
 4ec703ec0c384a2199808c4eb2e9037236285a8d # Issue not-present due to missing backport that partially introduced it.
+178b8ff66ff827c41b4fa105e9aabb99a0b5c537 # invasive fix without obvious gains
