--- a/series.conf
+++ b/series.conf
@@ -2018,6 +2018,7 @@
 	patches.kernel.org/6.17.8-630-net-bridge-Install-FDB-for-bridge-MAC-on-VLAN-.patch
 	patches.kernel.org/6.17.8-631-net-phy-dp83640-improve-phydev-and-driver-remo.patch
 	patches.kernel.org/6.17.8-632-scsi-ufs-core-Change-MCQ-interrupt-enable-flow.patch
+	patches.kernel.org/6.17.8-633-scsi-libfc-Fix-potential-buffer-overflow-in-fc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
