--- a/series.conf
+++ b/series.conf
@@ -33272,6 +33272,7 @@
 	patches.suse/spi-bcm63xx-spi-fix-shared-reset.patch
 	patches.suse/spi-bcm63xx-hsspi-fix-shared-reset.patch
 	patches.suse/ceph-fix-possible-integer-overflow-in-ceph_zero_objects.patch
+	patches.suse/s390-mm-Fix-in_atomic-handling-in-do_secure_storage_access.patch
 	patches.suse/KVM-s390-rename-PROT_NONE-to-PROT_TYPE_DUMMY.patch
 	patches.suse/0001-mm-hugetlb-unshare-page-tables-during-VMA-split-not-.patch
 	patches.suse/0001-mm-hugetlb-fix-huge_pmd_unshare-vs-GUP-fast-race.patch
