--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1257,3 +1257,4 @@ c2c8089f325ed703fd5123b39e2dece1dd605904 # fix that cannot apply; ublk code base
 e1bc3a13bd775791cca0bb144d977b00f3598042 # CVE-2025-38189 https://bugzilla.suse.com/show_bug.cgi?id=1245812#c9
 5124bc96162667766f6120b19f57a640c2eccb2a # driver not in SLE15
 e4414b01c1cd9887bbde92f946c1ba94e40d6d64 # CVE-2025-39990 https://bugzilla.suse.com/show_bug.cgi?id=1252054#c2
+a7075f501bd33c93570af759b6f4302ef0175168 # CVE-2025-40104 https://bugzilla.suse.com/show_bug.cgi?id=1252921#c6
