--- a/series.conf
+++ b/series.conf
@@ -24049,6 +24049,7 @@
 	patches.suse/octeontx2-pf-Fix-potential-use-after-free-in-otx2_tc_add_f.patch
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
+	patches.suse/ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/fs-udf-fix-OOB-read-in-lengthAllocDescs-handling.patch
 
