--- a/series.conf
+++ b/series.conf
@@ -12352,6 +12352,7 @@
 	patches.suse/arm64-dts-marvell-cn9132-clearfog-fix-multi-lane-pci-x2-an.patch
 	patches.suse/reset-eyeq-fix-OF-node-leak.patch
 	patches.suse/arm64-dts-imx8mp-Correct-thermal-sensor-index.patch
+	patches.suse/tracing-dynevent-Add-a-missing-lockdown-check-on-dynevent.patch
 	patches.suse/net-tun-Update-napi-skb-after-XDP-process.patch
 	patches.suse/net-smc-fix-warning-in-smc_rx_splice-when-calling-get_page.patch
 	patches.suse/Bluetooth-hci_sync-Fix-hci_resume_advertising_sync.patch
